fix image flickering issues with maps (issue 60)

--- a/projects/mistral/frontend/css/style.css
+++ b/projects/mistral/frontend/css/style.css
@@ -440,3 +440,21 @@ div.board + pre {
     background-color: #e8f0fe;
     color: #1967d2;
 }
+
+/* the following fix flickering issues with map carousel */
+.carousel-inner .carousel-item {
+  opacity: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: block;
+  position: absolute;
+}
+
+.carousel-inner .carousel-item:first-of-type {
+  position: relative;
+}
+
+.carousel-inner .active {
+  opacity: 1;
+}
